<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:id="@+id/add_dog_textview"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@+id/enter_dog_edittext"
        android:gravity="center"
        android:text="@string/add_new_dog_breed"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/enter_dog_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:hint="@string/enter_dog_breed"
        android:inputType="textAutoCorrect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_dog_textview"/>

    <Button
        android:id="@+id/cancel_add_dog_button"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@+id/enter_dog_edittext"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/submit_add_dog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:backgroundTint="#35ED2F"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/cancel_add_dog_button"
        app:layout_constraintTop_toBottomOf="@id/enter_dog_edittext"/>

</androidx.constraintlayout.widget.ConstraintLayout>